<resources>
    <string name="app_name">PokemonApp</string>
    <string name="WelcomeTextLabel">Welcome to the world of Pokémon! Press the button below to begin your journey.</string>
    <string name="TeamSelectionIntroLabel">Three teams of three Pokémon are available to you. Click on the buttons below to see each Pokémon team in detail, and then choose one team.</string>
    <string name="StartButtonLabel">Start</string>
    <string name="EnemyTrainerNameLabel">Enemy</string>
    <string name="PlayerTrainerNameLabel">Player</string>
    <string name="EnemyPokeHPBarLabel">Pokémon: HP</string>
    <string name="PlayerPokeHPBarLabel">Pokémon: HP</string>
    <string name="SamplePokeLabel">Pokémon</string>
    <string name="EnemyPokeConditionsLabel">Enemy Conditions</string>
    <string name="PlayerPokeConditionsLabel">Player Conditions</string>
    <string name="EnemyCurrPokeImageDescLabel">An image of the enemy\'s current Pokémon, which typically shows an animal-like creature</string>
    <string name="PlayerCurrPokeImageDescLabel">An image of the player\'s current Pokémon, which typically shows an animal-like creature</string>
    <string name="EnemyTeamPokeImageDescLabel">An image of a Pokémon in the enemy\'s team, which typically shows a small animal-like creature</string>
    <string name="PlayerTeamPokeImageDescLabel">An image of a Pokémon in the player\'s team, which typically shows a small animal-like creature</string>
    <string name="FirstMoveButtonLabel">Move 1</string>
    <string name="SecondMoveButtonLabel">Move 2</string>
    <string name="ThirdMoveButtonLabel">Move 3</string>
    <string name="FourthMoveButtonLabel">Move 4</string>
    <string name="FirstTeamButtonLabel">Team 1</string>
    <string name="SecondTeamButtonLabel">Team 2</string>
    <string name="ThirdTeamButtonLabel">Team 3</string>
    <string name="NextButtonLabel">Next</string>
    <string name="BackButtonLabel">Back</string>
    <string name="SwitchButtonLabel">Switch</string>
</resources>
