<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/teamText"
        style="@style/Theme.AppCompat.Light.DarkActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:maxWidth="300dp"
        android:text="@string/TeamSelectionIntroLabel"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/team1Button"
        style="@style/Theme.AppCompat.Light.DarkActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamText"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="10dp"
        android:text="@string/FirstTeamButtonLabel" />

    <Button
        android:id="@+id/team2Button"
        style="@style/Theme.AppCompat.Light.DarkActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/SecondTeamButtonLabel" />

    <Button
        android:id="@+id/team3Button"
        style="@style/Theme.AppCompat.Light.DarkActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:text="@string/ThirdTeamButtonLabel" />
</RelativeLayout>