<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/psRelLayout">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statsListView"
        android:choiceMode="singleChoice"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="75dp"
        android:focusable="true"
        android:smoothScrollbar="false"
        android:textFilterEnabled="false" />

    <TextView
        android:id="@+id/pokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statsListView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/SamplePokeLabel"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/pokemonPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/pokemonName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/PlayerCurrPokeImageDescLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NextButtonLabel"
        android:id="@+id/forwardButton"
        android:textSize="16sp"
        android:layout_alignTop="@+id/backButton"
        android:layout_alignRight="@+id/pokemonPic"
        android:layout_alignEnd="@+id/pokemonPic"
        android:layout_marginRight="-5dp"
        style="@style/Theme.AppCompat.Light.DarkActionBar"/>

    <Button
        android:id="@+id/backButton"
        style="@style/Theme.AppCompat.Light.DarkActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/statsListView"
        android:layout_alignRight="@+id/statsListView"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/BackButtonLabel"
        android:textSize="16sp" />

</RelativeLayout>